[workspace]
resolver = "2"
members = ["crates/riley-core", "crates/riley-api", "crates/riley-cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/rileyleff/riley_cms"
authors = ["Riley Leff <riley@rileyleff.com>"]
keywords = ["cms", "blog", "headless", "git", "s3"]
categories = ["web-programming", "command-line-utilities"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# S3
aws-sdk-s3 = "1.68"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }

# Git
git2 = "0.19"

# HTTP client (for webhooks)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Utilities
sha2 = "0.10"
hex = "0.4"
dirs = "6.0"
mime_guess = "2.0"

# Workspace crates
riley-core = { path = "crates/riley-core" }
riley-api = { path = "crates/riley-api" }
riley-cli = { path = "crates/riley-cli" }
