[workspace]
resolver = "2"
members = ["crates/riley-cms-core", "crates/riley-cms-api", "crates/riley-cms-cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/rileyleff/riley_cms"
authors = ["Riley Leff <rileyleff@gmail.com>"]
keywords = ["cms", "blog", "headless", "git", "s3"]
categories = ["web-programming", "command-line-utilities"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "set-header"] }
tower_governor = "0.8"

# CLI
clap = { version = "4.5", features = ["derive"] }

# S3
aws-sdk-s3 = "1.68"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }

# HTTP client (for webhooks)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Streaming
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
bytes = "1"

# Utilities
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
dirs = "6.0"
mime_guess = "2.0"
subtle = "2.6"

# Workspace crates
riley-cms-core = { path = "crates/riley-cms-core" }
riley-cms-api = { path = "crates/riley-cms-api" }
riley-cms-cli = { path = "crates/riley-cms-cli" }
