[package]
name = "riley-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "HTTP API server for riley_cms - Axum-based REST endpoints"
documentation = "https://docs.rs/riley-api"
readme = "../../README.md"

[dependencies]
riley-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
anyhow = { workspace = true }
base64 = "0.22"
http-body-util = "0.1"

[dev-dependencies]
tempfile = "3.19"
toml = { workspace = true }
