[package]
name = "riley-cms-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CLI for riley_cms - serve, validate, and manage your headless CMS"
documentation = "https://docs.rs/riley-cms-cli"
readme = "../../README.md"

[[bin]]
name = "riley_cms"
path = "src/main.rs"

[dependencies]
riley-cms-core = { workspace = true }
riley-cms-api = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
