[package]
name = "riley-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core library for riley_cms - content parsing, S3 storage, in-memory caching"
documentation = "https://docs.rs/riley-core"
readme = "../../README.md"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
dirs = { workspace = true }
mime_guess = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tempfile = "3.15"
temp-env = "0.3"
